Added twilio env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ jwt.refresh-expiration=2592000000
 logging.level.org.springframework=INFO
 
 # Twilio Configuration
-twilio.account.sid=
-twilio.auth.token=
+twilio.account.sid=${ACCOUNT_SID}
+twilio.auth.token=${AUTH_TOKEN}
 twilio.whatsapp.number=+14155238886
 
 # Logging Configuration
